--- a/main.css
+++ b/main.css
@@ -51,8 +51,8 @@ main {
 }
 
 header {
-  scale: 0;
-  animation: appear 500ms ease-in-out forwards 2000ms;
+  /* scale: 0; */
+  /* animation: appear 500ms ease-in-out forwards 2000ms; */
 
   & > img {
     margin: 2em;
@@ -107,8 +107,8 @@ header {
 
 .hero_brand {
   display: none;
-  scale: 0;
-  animation: appear 500ms ease-in-out forwards;
+  /* scale: 0; */
+  /* animation: appear 500ms ease-in-out forwards; */
 
   @media (min-width: 55em) {
     display: block;
@@ -126,8 +126,8 @@ header {
   line-height: 1.1;
   margin-inline: auto;
   max-width: min-content;
-  scale: 0;
-  animation: appear 500ms ease-in-out forwards 500ms;
+  /* scale: 0; */
+  /* animation: appear 500ms ease-in-out forwards 500ms; */
 
   & > span {
     color: var(--Desaturated-Red);
@@ -146,8 +146,8 @@ header {
   font-weight: var(--fw-400);
   margin-top: 1em;
   display: inline-block;
-  scale: 0;
-  animation: appear 500ms ease-in-out forwards 1000ms;
+  /* scale: 0; */
+  /* animation: appear 500ms ease-in-out forwards 1000ms; */
 
   @media (min-width: 55em) {
     line-height: 1.5;
@@ -157,8 +157,8 @@ header {
 }
 
 .hero_form {
-  scale: 0;
-  animation: appear 500ms ease-in-out forwards 1500ms;
+  /* scale: 0; */
+  /* animation: appear 500ms ease-in-out forwards 1500ms; */
 
   @media (min-width: 55em) {
     margin: 2em 0 0 5rem;
@@ -238,7 +238,7 @@ header {
   }
 }
 
-@keyframes appear {
+/* @keyframes appear {
   0% {
     scale: 0;
   }
@@ -248,4 +248,4 @@ header {
   100% {
     scale: 1;
   }
-}
+} */
